# camlidar_logger

./: CMakeLists.txt  README.md  package.xml
include/: camlidar_logger.h
launch/: 1cam2lidars.launch  2cams.launch  2cams1lidar.launch  4cams2lidars.launch
src/: main.cpp
